fix: default theme dark mode fix

--- a/notes/globals.css
+++ b/notes/globals.css
@@ -84,6 +84,7 @@
   }
 
   .dark {
+    --background: 234.55 17.46% 12.35%;
     --foreground: 229.76 31.78% 74.71%;
     --muted: 232.5 15.44% 18.32%;
     --muted-foreground: 233.79 11.37% 50%;
